Fixed z-index in popup

--- a/src/Flowers.css
+++ b/src/Flowers.css
@@ -100,7 +100,7 @@
   font-weight: 500;
   width: 635px;
   height: 315px;
-  z-index: 300;
+  z-index: 100;
   background-color: rgba(163, 147, 147, 0.8);
 }
 
@@ -152,7 +152,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 400;
 }
 
 .ground {
